--- a/AskME/templates/question.html
+++ b/AskME/templates/question.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sticky Footer Navbar Template · Bootstrap v5.2</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sticky-footer-navbar/">
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/style.css" rel="stylesheet">
+  <title>question</title>
+  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
 </head>
 
 <body>
@@ -31,7 +30,7 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
-    <img src="/static/img/avatar.jpeg" class="main-avatar" alt="">
+    <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
     <div class="user">
       <h1 class="navbar-brand">Timon</h1>
       <a class="btn btn-sm btn-outline-secondary" href="login.html">Log out</a>
@@ -46,7 +45,7 @@
       <article class="blog-post">
         <div class="row">
           <div class="col-auto">
-            <img src="/static/img/avatar.jpeg" class="avatar" alt="" />
+            <img src="../static/img/avatar.jpeg" class="avatar" alt="" />
           </div>
           <div class="col-10 btn-group-vertical">
             <a href="#"><h2 class="question-title">I am really struggling to push some information from a form onto a nested array</h2></a>
@@ -69,7 +68,7 @@
       <article class="blog-post border border-2" style="border-radius: 10px">
         <div class="row">
           <div class="col-auto">
-            <img src="/static/img/avatar.jpeg" class="main-avatar" alt="" />
+            <img src="../static/img/avatar.jpeg" class="main-avatar" alt="" />
           </div>
           <div class="col-9 btn-group-vertical">
             <p>You got this error inside getSavedCities() function, you must check if the
@@ -90,7 +89,7 @@
       <article class="blog-post border border-2" style="border-radius: 10px">
         <div class="row">
           <div class="col-auto">
-            <img src="/static/img/avatar.jpeg" class="main-avatar" alt="" />
+            <img src="../static/img/avatar.jpeg" class="main-avatar" alt="" />
           </div>
           <div class="col-9 btn-group-vertical">
             <p>You got this error inside getSavedCities() function, you must check if the
@@ -151,6 +150,6 @@
 </main>
 </body>
 
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
