--- a/AskME/templates/settings.html
+++ b/AskME/templates/settings.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sticky Footer Navbar Template · Bootstrap v5.2</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sticky-footer-navbar/">
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/style.css" rel="stylesheet">
+  <title>settings</title>
+  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
 </head>
 
 <body>
@@ -31,7 +30,7 @@
         <button class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
-    <img src="/static/img/avatar.jpeg" class="main-avatar" alt="">
+    <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
     <div class="user">
       <h1 class="navbar-brand">Timon</h1>
       <a class="btn btn-sm btn-outline-secondary" href="login.html">Log out</a>
@@ -48,7 +47,7 @@
 
       <form class="needs-validation" novalidate>
         <div class="mb-3 row">
-          <div class="col-auto"><img src="/static/img/avatar.jpeg" class="avatar" alt=""></div>
+          <div class="col-auto"><img src="../static/img/avatar.jpeg" class="avatar" alt=""></div>
           <div class="mb-3 col-sm-5 btn-group-vertical" style="float: right">
             <input class="form-control" type="file" id="formFile">
           </div>
@@ -118,6 +117,6 @@
 </main>
 </body>
 
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
