--- a/AskME/templates/signup.html
+++ b/AskME/templates/signup.html
@@ -3,10 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Sticky Footer Navbar Template · Bootstrap v5.2</title>
-  <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/sticky-footer-navbar/">
-  <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/static/css/style.css" rel="stylesheet">
+  <title>signup</title>
+  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
 </head>
 
 <body>
@@ -136,6 +135,6 @@
 </main>
 </body>
 
-<script src="/static/js/bootstrap.bundle.min.js"></script>
+<script src="../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
