--- a/AskME/templates/settings.html
+++ b/AskME/templates/settings.html
@@ -18,16 +18,16 @@
     </button>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="base.html">Home</a>
+        <a class="nav-link" href="base.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Settings</a>
+        <a class="nav-link active" href="#">Settings</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
       </form>
     </div>
     <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
