--- a/AskME/templates/signup.html
+++ b/AskME/templates/signup.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
+        <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
       </form>
     </div>
     <div class="user">
