[Add] Fixed question.html
Added likes and dislikes

--- a/AskME/templates/auth_ok/base.html
+++ b/AskME/templates/auth_ok/base.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>base</title>
-    <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
+    <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="../../static/css/style.css" >
 </head>
 
 <body>
@@ -21,7 +21,7 @@
                     <a class="nav-link active" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="settings.html">Settings</a>
+                    <a class="nav-link" href="../settings.html">Settings</a>
                 </li>
             </ul>
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
@@ -30,10 +30,10 @@
                     <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
                 </form>
             </div>
-            <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
+            <img src="../../static/img/avatar.jpeg" class="main-avatar" alt="">
             <div class="user">
                 <h1 class="navbar-brand">Timon</h1>
-                <a class="btn btn-sm btn-outline-secondary" href="login.html">Log out</a>
+                <a class="btn btn-sm btn-outline-secondary" href="../not_auth/login.html">Log out</a>
             </div>
         </div>
     </nav>
@@ -49,10 +49,10 @@
                 <article class="blog-post border border-2" style="border-radius: 10px">
                     <div class="row">
                         <div class="col-auto">
-                            <img src="../static/img/avatar.jpeg" class="avatar" alt="" />
+                            <img src="../../static/img/avatar.jpeg" class="avatar" alt="" />
                         </div>
                         <div class="col-10 btn-group-vertical">
-                            <a href="question.html"><h2 class="question-title">I am really struggling to push some information from a form onto a nested array</h2></a>
+                            <a href="../question.html"><h2 class="question-title">I am really struggling to push some information from a form onto a nested array</h2></a>
                             <p class="blog-post-meta">January 1, 2021 by <a href="#">Robert Barr</a></p>
                         </div>
                     </div>
@@ -67,7 +67,7 @@
                             <button type="button" class="btn btn-outline-primary">javascript-objects</button>
                         </div>
                         <div class="col-2 btn-group-vertical" style="float: right">
-                            <a href="question.html" class="icon-link d-inline-flex align-items-center">
+                            <a href="../question.html" class="icon-link d-inline-flex align-items-center">
                                 2 answers
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat" viewBox="0 0 16 16" style="margin-left: 10px">
                                     <path d="M2.678 11.894a1 1 0 0 1 .287.801 10.97 10.97 0 0 1-.398 2c1.395-.323 2.247-.697 2.634-.893a1 1 0 0 1 .71-.074A8.06 8.06 0 0 0 8 14c3.996 0 7-2.807 7-6 0-3.192-3.004-6-7-6S1 4.808 1 8c0 1.468.617 2.83 1.678 3.894zm-.493 3.905a21.682 21.682 0 0 1-.713.129c-.2.032-.352-.176-.273-.362a9.68 9.68 0 0 0 .244-.637l.003-.01c.248-.72.45-1.548.524-2.319C.743 11.37 0 9.76 0 8c0-3.866 3.582-7 8-7s8 3.134 8 7-3.582 7-8 7a9.06 9.06 0 0 1-2.347-.306c-.52.263-1.639.742-3.468 1.105z"/>
@@ -80,7 +80,7 @@
                 <article class="blog-post border border-2" style="border-radius: 10px">
                     <div class="row">
                         <div class="col-auto">
-                            <img src="../static/img/avatar.jpeg" class="avatar" alt="" />
+                            <img src="../../static/img/avatar.jpeg" class="avatar" alt="" />
                         </div>
                         <div class="col-10 btn-group-vertical">
                             <a href="#"><h2 class="question-title">I am really struggling to push some information from a form onto a nested array</h2></a>
@@ -111,7 +111,7 @@
                 <article class="blog-post border border-2" style="border-radius: 10px">
                     <div class="row">
                         <div class="col-auto">
-                            <img src="../static/img/avatar.jpeg" class="avatar" alt="" />
+                            <img src="../../static/img/avatar.jpeg" class="avatar" alt="" />
                         </div>
                         <div class="col-10 btn-group-vertical">
                             <a href="#"><h2 class="question-title">I am really struggling to push some information from a form onto a nested array</h2></a>
@@ -190,6 +190,6 @@
     </main>
 </body>
 
-<script src="../static/js/bootstrap.bundle.min.js"></script>
+<script src="../../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
