--- a/AskME/templates/not_auth/login.html
+++ b/AskME/templates/not_auth/login.html
@@ -3,37 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ask</title>
-  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
+  <title>login</title>
+  <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../static/css/style.css" >
 </head>
 
 <body>
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="base.html">AskME</a>
+    <a class="navbar-brand" href="../auth_ok/base.html">AskME</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="base.html">Home</a>
+        <a class="nav-link active" href="../auth_ok/base.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="settings.html">Settings</a>
+        <a class="nav-link" href="../settings.html">Settings</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
+        <a href="../auth_ok/ask.html"><button type="button" class="btn btn-success">ASK</button></a>
       </form>
     </div>
-    <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
     <div class="user">
-      <h1 class="navbar-brand">Timon</h1>
-      <a class="btn btn-sm btn-outline-secondary" href="login.html">Log out</a>
+      <a class="btn btn-sm btn-outline-secondary" href="#">Log in</a>
+      <a class="btn btn-sm btn-outline-secondary" href="../signup.html">Register</a>
     </div>
   </div>
 </nav>
@@ -42,25 +41,35 @@
   <div class="row g-5">
     <div class="col-md-8">
       <div class="pb-4 mb-4 fst-italic border-bottom">
-        <h3>New Question</h3>
+        <h3>Log In</h3>
       </div>
 
-      <div class="mb-3">
-        <label for="exampleFormControlInput1" class="form-label">Title</label>
-        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="How to build a moon park?">
-      </div>
-      <div class="mb-3">
-        <label for="exampleFormControlTextarea1" class="form-label">Text</label>
-        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
-                  placeholder="Really, how? Have no idea about it"></textarea>
-      </div>
-      <div class="mb  -3">
-        <label for="exampleFormControlInput1" class="form-label">Tags</label>
-        <input type="email" class="form-control" placeholder="moon, park, puzzle">
-      </div>
-      <div style="float: right">
-        <button type="button" class="btn btn-outline-success btn-lg">Ask!</button>
-      </div>
+      <form class="needs-validation" novalidate>
+        <div class="mb-3 row">
+          <label class="col-sm-2 col-form-label">Login</label>
+          <div class="col-sm-4">
+            <input type="text" class="form-control" id="validationCustom01" required>
+            <div class="valid-feedback">
+              Ok
+            </div>
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <label class="col-sm-2 col-form-label">Password</label>
+          <div class="col-sm-4">
+            <label for="inputPassword2" class="visually-hidden">Пароль</label>
+            <input type="password" class="form-control" id="inputPassword2">
+          </div>
+        </div>
+        <div class="mb-3 row">
+          <div class="col-auto">
+            <button class="btn btn-primary" type="submit">Log in!</button>
+          </div>
+          <a href="../signup.html" class="col-auto btn-group-vertical">create account</a>
+        </div>
+
+      </form>
+
     </div>
 
     <div class="col-md-4">
@@ -94,6 +103,6 @@
 </main>
 </body>
 
-<script src="../static/js/bootstrap.bundle.min.js"></script>
+<script src="../../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
