--- a/AskME/templates/auth_ok/ask.html
+++ b/AskME/templates/auth_ok/ask.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>login</title>
-  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
+  <title>ask</title>
+  <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../static/css/style.css" >
 </head>
 
 <body>
@@ -21,7 +21,7 @@
         <a class="nav-link active" href="base.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="settings.html">Settings</a>
+        <a class="nav-link" href="../settings.html">Settings</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
@@ -30,9 +30,10 @@
         <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
       </form>
     </div>
+    <img src="../../static/img/avatar.jpeg" class="main-avatar" alt="">
     <div class="user">
-      <a class="btn btn-sm btn-outline-secondary" href="#">Log in</a>
-      <a class="btn btn-sm btn-outline-secondary" href="signup.html">Register</a>
+      <h1 class="navbar-brand">Timon</h1>
+      <a class="btn btn-sm btn-outline-secondary" href="../not_auth/login.html">Log out</a>
     </div>
   </div>
 </nav>
@@ -41,35 +42,25 @@
   <div class="row g-5">
     <div class="col-md-8">
       <div class="pb-4 mb-4 fst-italic border-bottom">
-        <h3>Log In</h3>
+        <h3>New Question</h3>
       </div>
 
-      <form class="needs-validation" novalidate>
-        <div class="mb-3 row">
-          <label class="col-sm-2 col-form-label">Login</label>
-          <div class="col-sm-4">
-            <input type="text" class="form-control" id="validationCustom01" required>
-            <div class="valid-feedback">
-              Ok
-            </div>
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <label class="col-sm-2 col-form-label">Password</label>
-          <div class="col-sm-4">
-            <label for="inputPassword2" class="visually-hidden">Пароль</label>
-            <input type="password" class="form-control" id="inputPassword2">
-          </div>
-        </div>
-        <div class="mb-3 row">
-          <div class="col-auto">
-            <button class="btn btn-primary" type="submit">Log in!</button>
-          </div>
-          <a href="signup.html" class="col-auto btn-group-vertical">create account</a>
-        </div>
-
-      </form>
-
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Title</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="How to build a moon park?">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Text</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                  placeholder="Really, how? Have no idea about it"></textarea>
+      </div>
+      <div class="mb  -3">
+        <label for="exampleFormControlInput1" class="form-label">Tags</label>
+        <input type="email" class="form-control" placeholder="moon, park, puzzle">
+      </div>
+      <div style="float: right; margin-top: 40px">
+        <button type="button" class="btn btn-outline-success btn-lg">Ask!</button>
+      </div>
     </div>
 
     <div class="col-md-4">
@@ -103,6 +94,6 @@
 </main>
 </body>
 
-<script src="../static/js/bootstrap.bundle.min.js"></script>
+<script src="../../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
