--- a/AskME/templates/settings.html
+++ b/AskME/templates/settings.html
@@ -12,13 +12,13 @@
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="base.html">AskME</a>
+    <a class="navbar-brand" href="auth_ok/base.html">AskME</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link" href="base.html">Home</a>
+        <a class="nav-link" href="auth_ok/base.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" href="#">Settings</a>
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
+        <a href="auth_ok/ask.html"><button type="button" class="btn btn-success">ASK</button></a>
       </form>
     </div>
     <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
     <div class="user">
       <h1 class="navbar-brand">Timon</h1>
-      <a class="btn btn-sm btn-outline-secondary" href="login.html">Log out</a>
+      <a class="btn btn-sm btn-outline-secondary" href="not_auth/login.html">Log out</a>
     </div>
   </div>
 </nav>
