--- a/AskME/templates/not_auth/login.html
+++ b/AskME/templates/not_auth/login.html
@@ -21,7 +21,7 @@
         <a class="nav-link active" href="../auth_ok/base.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../settings.html">Settings</a>
+        <a class="nav-link" href="../auth_ok/settings.html">Settings</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
@@ -32,7 +32,7 @@
     </div>
     <div class="user">
       <a class="btn btn-sm btn-outline-secondary" href="#">Log in</a>
-      <a class="btn btn-sm btn-outline-secondary" href="../signup.html">Register</a>
+      <a class="btn btn-sm btn-outline-secondary" href="signup.html">Register</a>
     </div>
   </div>
 </nav>
@@ -65,7 +65,7 @@
           <div class="col-auto">
             <button class="btn btn-primary" type="submit">Log in!</button>
           </div>
-          <a href="../signup.html" class="col-auto btn-group-vertical">create account</a>
+          <a href="signup.html" class="col-auto btn-group-vertical">create account</a>
         </div>
 
       </form>
