--- a/AskME/templates/auth_ok/ask.html
+++ b/AskME/templates/auth_ok/ask.html
@@ -21,7 +21,7 @@
         <a class="nav-link active" href="base.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../settings.html">Settings</a>
+        <a class="nav-link" href="settings.html">Settings</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
