--- a/AskME/templates/auth_ok/question.html
+++ b/AskME/templates/auth_ok/question.html
@@ -4,21 +4,21 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>question</title>
-  <link href="../static/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../static/css/style.css" >
+  <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../../static/css/style.css" >
 </head>
 
 <body>
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="auth_ok/base.html">AskME</a>
+    <a class="navbar-brand" href="base.html">AskME</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="auth_ok/base.html">Home</a>
+        <a class="nav-link active" href="base.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="settings.html">Settings</a>
@@ -27,13 +27,13 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
       <form class="d-flex" role="search">
         <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <a href="auth_ok/ask.html"><button type="button" class="btn btn-success">ASK</button></a>
+        <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
       </form>
     </div>
-    <img src="../static/img/avatar.jpeg" class="main-avatar" alt="">
+    <img src="../../static/img/avatar.jpeg" class="main-avatar" alt="">
     <div class="user">
       <h1 class="navbar-brand">Timon</h1>
-      <a class="btn btn-sm btn-outline-secondary" href="not_auth/login.html">Log out</a>
+      <a class="btn btn-sm btn-outline-secondary" href="../not_auth/login.html">Log out</a>
     </div>
   </div>
 </nav>
@@ -45,7 +45,7 @@
       <article class="blog-post">
         <div class="row">
           <div class="col-auto">
-            <img src="../static/img/avatar.jpeg" class="avatar" alt="" />
+            <img src="../../static/img/avatar.jpeg" class="avatar" alt="" />
           </div>
           <div class="col-10 btn-group-vertical">
             <a href="#"><h2 class="question-title">I am really struggling to push some information from a form onto a nested array</h2></a>
@@ -81,14 +81,14 @@
         <div class="col-auto"><article class="blog-post border border-2" style="border-radius: 10px">
           <div class="row">
             <div class="col-auto">
-              <img src="../static/img/avatar.jpeg" class="main-avatar" alt="" />
+              <img src="../../static/img/avatar.jpeg" class="main-avatar" alt="" />
             </div>
             <div class="col-9 btn-group-vertical">
               <p>You got this error inside getSavedCities() function, you must check if the
                 value is undefined before parsing it. You cannot parse a JSON with an undefined value.
                 A JSON value can be an object, array, number, string, true, false, or null.</p>
             </div>
-            <div class="col-auto" style="margin: 5px">
+            <div class="col-auto" style="float: right; margin: 5px">
               <p><button type="button" class="btn btn-outline-success">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
                   <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
@@ -100,6 +100,12 @@
                 </svg>
               </button></p>
             </div>
+          </div>
+          <div class="form-check" style="margin-left: 20px; margin-bottom: 10px">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              <b>Correct!</b>
+            </label>
           </div>
         </article></div>
       </div>
@@ -120,14 +126,14 @@
         <div class="col-auto"><article class="blog-post border border-2" style="border-radius: 10px">
           <div class="row">
             <div class="col-auto">
-              <img src="../static/img/avatar.jpeg" class="main-avatar" alt="" />
+              <img src="../../static/img/avatar.jpeg" class="main-avatar" alt="" />
             </div>
             <div class="col-9 btn-group-vertical">
               <p>You got this error inside getSavedCities() function, you must check if the
                 value is undefined before parsing it. You cannot parse a JSON with an undefined value.
                 A JSON value can be an object, array, number, string, true, false, or null.</p>
             </div>
-            <div class="col-auto" style="margin: 5px">
+            <div class="col-auto" style="float: right; margin: 5px">
               <p><button type="button" class="btn btn-outline-success">
                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-hand-thumbs-up" viewBox="0 0 16 16">
                   <path d="M8.864.046C7.908-.193 7.02.53 6.956 1.466c-.072 1.051-.23 2.016-.428 2.59-.125.36-.479 1.013-1.04 1.639-.557.623-1.282 1.178-2.131 1.41C2.685 7.288 2 7.87 2 8.72v4.001c0 .845.682 1.464 1.448 1.545 1.07.114 1.564.415 2.068.723l.048.03c.272.165.578.348.97.484.397.136.861.217 1.466.217h3.5c.937 0 1.599-.477 1.934-1.064a1.86 1.86 0 0 0 .254-.912c0-.152-.023-.312-.077-.464.201-.263.38-.578.488-.901.11-.33.172-.762.004-1.149.069-.13.12-.269.159-.403.077-.27.113-.568.113-.857 0-.288-.036-.585-.113-.856a2.144 2.144 0 0 0-.138-.362 1.9 1.9 0 0 0 .234-1.734c-.206-.592-.682-1.1-1.2-1.272-.847-.282-1.803-.276-2.516-.211a9.84 9.84 0 0 0-.443.05 9.365 9.365 0 0 0-.062-4.509A1.38 1.38 0 0 0 9.125.111L8.864.046zM11.5 14.721H8c-.51 0-.863-.069-1.14-.164-.281-.097-.506-.228-.776-.393l-.04-.024c-.555-.339-1.198-.731-2.49-.868-.333-.036-.554-.29-.554-.55V8.72c0-.254.226-.543.62-.65 1.095-.3 1.977-.996 2.614-1.708.635-.71 1.064-1.475 1.238-1.978.243-.7.407-1.768.482-2.85.025-.362.36-.594.667-.518l.262.066c.16.04.258.143.288.255a8.34 8.34 0 0 1-.145 4.725.5.5 0 0 0 .595.644l.003-.001.014-.003.058-.014a8.908 8.908 0 0 1 1.036-.157c.663-.06 1.457-.054 2.11.164.175.058.45.3.57.65.107.308.087.67-.266 1.022l-.353.353.353.354c.043.043.105.141.154.315.048.167.075.37.075.581 0 .212-.027.414-.075.582-.05.174-.111.272-.154.315l-.353.353.353.354c.047.047.109.177.005.488a2.224 2.224 0 0 1-.505.805l-.353.353.353.354c.006.005.041.05.041.17a.866.866 0 0 1-.121.416c-.165.288-.503.56-1.066.56z"/>
@@ -139,6 +145,12 @@
                 </svg>
               </button></p>
             </div>
+          </div>
+          <div class="form-check" style="margin-left: 20px; margin-bottom: 10px">
+            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+            <label class="form-check-label" for="flexCheckDefault">
+              <b>Correct!</b>
+            </label>
           </div>
         </article></div>
       </div>
@@ -186,6 +198,6 @@
 </main>
 </body>
 
-<script src="../static/js/bootstrap.bundle.min.js"></script>
+<script src="../../static/js/bootstrap.bundle.min.js"></script>
 
 </html>
