--- a/AskME/templates/auth_ok/settings.html
+++ b/AskME/templates/auth_ok/settings.html
@@ -45,7 +45,7 @@
         <h3>Settings</h3>
       </div>
 
-      <form class="needs-validation" novalidate>
+      <form class="needs-validation" style="width: max-content" novalidate>
         <div class="mb-3 row">
           <div class="col-auto"><img src="../../static/img/avatar.jpeg" class="avatar" alt=""></div>
           <div class="mb-3 col-sm-5 btn-group-vertical" style="float: right">
