--- a/AskME/templates/not_auth/login.html
+++ b/AskME/templates/not_auth/login.html
@@ -44,7 +44,7 @@
         <h3>Log In</h3>
       </div>
 
-      <form class="needs-validation" novalidate>
+      <form class="needs-validation" style="width: max-content" novalidate>
         <div class="mb-3 row">
           <label class="col-sm-4 col-form-label">Login</label>
           <div class="col-sm-8">
