--- a/AskME/templates/not_auth/signup.html
+++ b/AskME/templates/not_auth/signup.html
@@ -44,7 +44,7 @@
         <h3>Registration</h3>
       </div>
       <img src="../../static/img/unknown.jpg" class="unknown" alt="" style="float: right">
-      <form class="needs-validation" novalidate>
+      <form class="needs-validation" style="width: max-content" novalidate>
         <div class="mb-3 row">
           <label class="col-sm-3 col-form-label">Login</label>
           <div class="col-sm-6">
