--- a/AskME/templates/not_auth/signup.html
+++ b/AskME/templates/not_auth/signup.html
@@ -1,24 +1,25 @@
 <!doctype html>
+{% load static %}
 <html lang="en" class="h-100">
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>signup</title>
-  <link href="../../static/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="../../static/css/style.css" >
+  <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 </head>
 
 <body>
 <!-- Fixed navbar -->
 <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
   <div class="container-fluid">
-    <a class="navbar-brand" href="../auth_ok/base.html">AskME</a>
+    <a class="navbar-brand" href="../auth_ok/index.html">AskME</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <ul class="navbar-nav">
       <li class="nav-item">
-        <a class="nav-link active" href="../auth_ok/base.html">Home</a>
+        <a class="nav-link active" href="../auth_ok/index.html">Home</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="../auth_ok/settings.html">Settings</a>
@@ -155,6 +156,6 @@
 </main>
 </body>
 
-<script src="../../static/js/bootstrap.bundle.min.js"></script>
+<script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
 
 </html>
