--- a/AskME/templates/inc/base.html
+++ b/AskME/templates/inc/base.html
@@ -1,10 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+{% load static %}
+<html lang="en" class="h-100">
 <head>
-  <meta charset="UTF-8">
-  <title>Title</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>base</title>
+    <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
 </head>
-<body>
 
+<body>
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="{% url "index" %}">AskME</a>
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" href="{% url "index" %}">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url "settings" %}">Settings</a>
+                </li>
+            </ul>
+            <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
+                <form class="d-flex" role="search">
+                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                    <a href="{% url "ask" %}"><button type="button" class="btn btn-success">ASK</button></a>
+                </form>
+            </div>
+            <img src="{% static "img/avatar.jpeg" %}" class="main-avatar" alt="">
+            <div class="user">
+                <h1 class="navbar-brand">Timon</h1>
+                <a class="btn btn-sm btn-outline-secondary" href="{% url "login" %}">Log out</a>
+            </div>
+        </div>
+    </nav>
+
+    <main class="container">
+        <div class="row g-5">
+
+            {% block content %}
+            {% endblock %}
+
+            <div class="col-md-4">
+                <div class="position-sticky" style="top: 2rem;">
+
+                    <div class="p-4">
+                        <h4 class="fst-italic">Popular Tags</h4>
+                        <div class="btn-group" role="group" aria-label="Basic mixed styles example">
+                            <button type="button" class="btn btn-danger">Swift</button>
+                            <button type="button" class="btn btn-warning">Xcode</button>
+                            <button type="button" class="btn btn-success">mail.ru</button>
+                            <button type="button" class="btn btn-primary">html</button>
+                            <button type="button" class="btn btn-secondary">css</button>
+                            <button type="button" class="btn btn-dark">JavaScript</button>
+                        </div>
+                    </div>
+
+                    <div class="p-4">
+                        <h4 class="fst-italic">Best Members</h4>
+                        <ol class="list-unstyled">
+                            <li><a href="#">Mr. Freeman</a></li>
+                            <li><a href="#">Dr. House</a></li>
+                            <li><a href="#">Bender</a></li>
+                            <li><a href="#">Queen Victoria</a></li>
+                            <li><a href="#">V. Pupkin</a></li>
+                        </ol>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </main>
 </body>
+
+<script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
+
 </html>
