--- a/AskME/templates/auth_ok/ask.html
+++ b/AskME/templates/auth_ok/ask.html
@@ -1,126 +1,55 @@
-<!doctype html>
+{% extends "inc/base.html" %}
 {% load static %}
-<html lang="en" class="h-100">
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>ask</title>
-  <link href="{% static "css/bootstrap.min.css" %}" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="{% static "css/style.css" %}">
-</head>
 
-<body>
-<!-- Fixed navbar -->
-<nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="index.html">AskME</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <ul class="navbar-nav">
-      <li class="nav-item">
-        <a class="nav-link active" href="index.html">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="settings.html">Settings</a>
-      </li>
-    </ul>
-    <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <a href="ask.html"><button type="button" class="btn btn-success">ASK</button></a>
-      </form>
-    </div>
-    <img src="../../static/img/avatar.jpeg" class="main-avatar" alt="">
-    <div class="user">
-      <h1 class="navbar-brand">Timon</h1>
-      <a class="btn btn-sm btn-outline-secondary" href="../not_auth/login.html">Log out</a>
-    </div>
-  </div>
-</nav>
-<!--main-->
-<main class="container">
-  <div class="row g-5">
-    <div class="col-md-8">
-      <div class="pb-4 mb-4 fst-italic border-bottom">
+{% block content %}
+
+<div class="col-md-8">
+    <div class="pb-4 mb-4 fst-italic border-bottom">
         <h3>New Question</h3>
-      </div>
+    </div>
 
-      <form class="needs-validation" novalidate>
+    <form class="needs-validation" novalidate>
         <div class="mb-3">
-          <label class="col-sm-4 col-form-label">Title</label>
-          <div class="col-7">
-            <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="How to build a moon park?" required>
-            <div class="valid-feedback">
-                Ok
-              </div>
-              <div class="invalid-feedback">
-                Please, enter a title
-              </div>
-          </div>
-        </div>
-        <div class="mb-3">
-          <label class="col-sm-4 col-form-label">Text</label>
-          <div class="col-7">
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
-                      placeholder="Really, how? Have no idea about it" required></textarea>
-            <div class="valid-feedback">
-                Ok
-              </div>
-              <div class="invalid-feedback">
-                What do you want to say?
-              </div>
+            <label class="col-sm-4 col-form-label">Title</label>
+            <div class="col-7">
+                <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="How to build a moon park?" required>
+                <div class="valid-feedback">
+                    Ok
+                </div>
+                <div class="invalid-feedback">
+                    Please, enter a title
+                </div>
             </div>
         </div>
         <div class="mb-3">
-          <label class="col-sm-4 col-form-label">Tags</label>
-          <div class="col-7">
-            <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="moon, park, puzzle" required>
-            <div class="valid-feedback">
-                Ok
-              </div>
-              <div class="invalid-feedback">
-                Tags are needed
-              </div>
-          </div>
+            <label class="col-sm-4 col-form-label">Text</label>
+            <div class="col-7">
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="4"
+                      placeholder="Really, how? Have no idea about it" required></textarea>
+                <div class="valid-feedback">
+                    Ok
+                </div>
+                <div class="invalid-feedback">
+                    What do you want to say?
+                </div>
+            </div>
         </div>
-        <div>
-          <button type="submit" class="btn btn-outline-success btn-lg">Ask!</button>
+        <div class="mb-3">
+            <label class="col-sm-4 col-form-label">Tags</label>
+            <div class="col-7">
+                <input type="text" class="form-control" id="exampleFormControlInput2" placeholder="moon, park, puzzle" required>
+                <div class="valid-feedback">
+                    Ok
+                </div>
+                <div class="invalid-feedback">
+                    Tags are needed
+                </div>
+            </div>
         </div>
-      </form>
-    </div>
-
-    <div class="col-md-4">
-      <div class="position-sticky" style="top: 2rem;">
-
-        <div class="p-4">
-          <h4 class="fst-italic">Popular Tags</h4>
-          <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-            <button type="button" class="btn btn-danger">Swift</button>
-            <button type="button" class="btn btn-warning">Xcode</button>
-            <button type="button" class="btn btn-success">mail.ru</button>
-            <button type="button" class="btn btn-primary">html</button>
-            <button type="button" class="btn btn-secondary">css</button>
-            <button type="button" class="btn btn-dark">JavaScript</button>
-          </div>
+        <div style="margin-top: 30px">
+            <button type="submit" class="btn btn-outline-success btn-lg">Ask!</button>
         </div>
+    </form>
+</div>
 
-        <div class="p-4">
-          <h4 class="fst-italic">Best Members</h4>
-          <ol class="list-unstyled">
-            <li><a href="#">Mr. Freeman</a></li>
-            <li><a href="#">Dr. House</a></li>
-            <li><a href="#">Bender</a></li>
-            <li><a href="#">Queen Victoria</a></li>
-            <li><a href="#">V. Pupkin</a></li>
-          </ol>
-        </div>
-      </div>
-    </div>
-  </div>
-</main>
-</body>
-
-<script src="{% static "js/bootstrap.bundle.min.js" %}"></script>
-
-</html>
+{% endblock %}
