--- a/AskME/templates/auth_ok/hot.html
+++ b/AskME/templates/auth_ok/hot.html
@@ -5,8 +5,7 @@
 
 <div class="col-md-8">
     <div class="pb-4 mb-4 fst-italic border-bottom">
-        <h3>New Questions</h3>
-        <a href="{% url "hot" %}">Hot questions</a>
+        <h3>Hot questions</h3>
     </div>
 
     {% for question in questions %}
