--- a/AskME/templates/inc/base.html
+++ b/AskME/templates/inc/base.html
@@ -14,25 +14,45 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url "index" %}">AskME</a>
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" href="{% url "index" %}">Home</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url "settings" %}">Settings</a>
-                </li>
-            </ul>
+            {% if page == "Settings" %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "index" %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url "settings" %}">Settings</a>
+                    </li>
+                </ul>
+            {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url "index" %}">Home</a>
+                    </li>
+                    {% if is_auth %}
+                        <li class="nav-item">
+                            <a class="nav-link" href="{% url "settings" %}">Settings</a>
+                        </li>
+                    {% endif %}
+                </ul>
+            {% endif %}
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
                 <form class="d-flex" role="search">
                     <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
                     <a href="{% url "ask" %}"><button type="button" class="btn btn-success">ASK</button></a>
                 </form>
             </div>
-            <img src="{% static "img/avatar.jpeg" %}" class="main-avatar" alt="">
-            <div class="user">
-                <h1 class="navbar-brand">Timon</h1>
-                <a class="btn btn-sm btn-outline-secondary" href="{% url "login" %}">Log out</a>
-            </div>
+            {% if is_auth %}
+                <img src="{% static "img/avatar.jpeg" %}" class="main-avatar" alt="">
+                <div class="user">
+                    <h1 class="navbar-brand">Timon</h1>
+                    <a class="btn btn-sm btn-outline-secondary" href="{% url "login" %}">Log out</a>
+                </div>
+            {% else %}
+                <div class="user">
+                  <a class="btn btn-sm btn-outline-secondary" href="{% url "login" %}">Log in</a>
+                  <a class="btn btn-sm btn-outline-secondary" href="{% url "signup" %}">Register</a>
+                </div>
+            {% endif %}
         </div>
     </nav>
 
@@ -48,12 +68,11 @@
                     <div class="p-4">
                         <h4 class="fst-italic">Popular Tags</h4>
                         <div class="btn-group" role="group" aria-label="Basic mixed styles example">
-                            <button type="button" class="btn btn-danger">Swift</button>
-                            <button type="button" class="btn btn-warning">Xcode</button>
-                            <button type="button" class="btn btn-success">mail.ru</button>
-                            <button type="button" class="btn btn-primary">html</button>
-                            <button type="button" class="btn btn-secondary">css</button>
-                            <button type="button" class="btn btn-dark">JavaScript</button>
+                            {% for tag in pop_tags %}
+                                <a href="{% url "tag" question_tag=tag.name %}" class="{{ tag.color }}">
+                                    {{ tag.name }}
+                                </a>
+                            {% endfor %}
                         </div>
                     </div>
 
