--- a/AskME/templates/auth_ok/index.html
+++ b/AskME/templates/auth_ok/index.html
@@ -9,7 +9,7 @@
         <a href="{% url "hot" %}">Hot questions</a>
     </div>
 
-    {% for question in questions %}
+    {% for question in page %}
         {% include "inc/question-item.html" %}
     {% endfor %}
 
