--- a/AskME/templates/inc/paginator.html
+++ b/AskME/templates/inc/paginator.html
@@ -1,17 +1,29 @@
-<nav aria-label="Page navigation example">
+{% if page.has_other_pages %}
+
+<nav aria-label="Page navigation example" style="margin-bottom: 50px">
     <ul class="pagination">
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Previous">
-                <span aria-hidden="true">&laquo;</span>
-            </a>
-        </li>
-        <li class="page-item"><a class="page-link" href="#">1</a></li>
-        <li class="page-item"><a class="page-link" href="#">2</a></li>
-        <li class="page-item"><a class="page-link" href="#">3</a></li>
-        <li class="page-item">
-            <a class="page-link" href="#" aria-label="Next">
-                <span aria-hidden="true">&raquo;</span>
-            </a>
-        </li>
+        {% if page.has_previous %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page.previous_page_number }}" aria-label="Previous">
+                    <span aria-hidden="true">&laquo;</span>
+                </a>
+            </li>
+        {% endif %}
+        {% for p in paginator.page_range %}
+            {% if page.number == p %}
+                <li class="page-item active"><a class="page-link" href="#">{{ p }}</a></li>
+            {% elif p >= page.number|add:-2 and p <= page.number|add:2 %}
+                <li class="page-item"><a class="page-link" href="?page={{ p }}">{{ p }}</a></li>
+            {% endif %}
+        {% endfor %}
+        {% if page.has_next %}
+            <li class="page-item">
+                <a class="page-link" href="?page={{ page.next_page_number }}" aria-label="Next">
+                    <span aria-hidden="true">&raquo;</span>
+                </a>
+            </li>
+        {% endif %}
     </ul>
 </nav>
+
+{% endif %}
