[ADD] Added pagination to tag and hot

--- a/AskME/templates/auth_ok/hot.html
+++ b/AskME/templates/auth_ok/hot.html
@@ -8,7 +8,7 @@
         <h3>Hot questions</h3>
     </div>
 
-    {% for question in questions %}
+    {% for question in page %}
         {% include "inc/question-item.html" %}
     {% endfor %}
 
