--- a/AskME/templates/inc/base.html
+++ b/AskME/templates/inc/base.html
@@ -14,16 +14,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url "index" %}">AskME</a>
-            {% if page == "Settings" %}
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url "index" %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="{% url "settings" %}">Settings</a>
-                    </li>
-                </ul>
-            {% else %}
+            {% if is_home %}
                 <ul class="navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link active" href="{% url "index" %}">Home</a>
@@ -33,6 +24,15 @@
                             <a class="nav-link" href="{% url "settings" %}">Settings</a>
                         </li>
                     {% endif %}
+                </ul>
+            {% else %}
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url "index" %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link active" href="{% url "settings" %}">Settings</a>
+                    </li>
                 </ul>
             {% endif %}
             <div class="collapse navbar-collapse justify-content-center" id="navbarCollapse">
