--- a/AskME/templates/main/question.html
+++ b/AskME/templates/main/question.html
@@ -7,7 +7,7 @@
     <article class="blog-post">
         <div class="row">
             <div class="col-auto">
-                <img src="../../static/img/avatar.jpeg" class="avatar" alt="" />
+                <img src="{% static "img/avatar.jpeg" %}" class="avatar" alt="" />
             </div>
             <div class="col-10 btn-group-vertical">
                 <a href="#"><h2 class="question-title">{{ question.title }}</h2></a>
