[ADD] Connected to postgres and added date for answers

--- a/AskME/templates/inc/answer.html
+++ b/AskME/templates/inc/answer.html
@@ -9,6 +9,10 @@
                 </div>
                 <div class="col-8 btn-group-vertical">
                     <p>{{ answer.text }}</p>
+                    <p class="blog-post-meta" style="color: #ced4da">
+                        <b>January 1, 2021 by</b>
+                        <a href="#">Robert Barr</a>
+                    </p>
                 </div>
                 <div class="col-auto" style="float: right; margin: 5px">
                     <button type="button" class="btn btn-outline-success">
